--- a/src/ToHeaven/CandleProduct.form
+++ b/src/ToHeaven/CandleProduct.form
@@ -33,9 +33,9 @@
                       <Group type="102" attributes="0">
                           <Component id="priceLB" min="-2" pref="100" max="-2" attributes="0"/>
                           <EmptySpace min="60" pref="60" max="-2" attributes="0"/>
-                          <Component id="choosePieceCoffin" min="-2" pref="110" max="-2" attributes="0"/>
+                          <Component id="choosePieceCandle" min="-2" pref="110" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                          <Component id="pieceCoffin" min="-2" pref="80" max="-2" attributes="0"/>
+                          <Component id="pieceCandle" min="-2" pref="80" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -63,9 +63,9 @@
                               <Component id="priceLB" min="-2" pref="30" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
-                                  <Component id="choosePieceCoffin" min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Component id="choosePieceCandle" min="-2" pref="30" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="pieceCoffin" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="pieceCandle" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -76,7 +76,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="choosePieceCoffin">
+    <Component class="javax.swing.JLabel" name="choosePieceCandle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="TH Sarabun New" size="18" style="1"/>
@@ -84,7 +84,7 @@
         <Property name="text" type="java.lang.String" value="&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&#xe08;&#xe33;&#xe19;&#xe27;&#xe19;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JSpinner" name="pieceCoffin">
+    <Component class="javax.swing.JSpinner" name="pieceCandle">
       <Properties>
         <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
           <SpinnerModel initial="0" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
