--- a/src/ToHeaven/CoffinProductPage.form
+++ b/src/ToHeaven/CoffinProductPage.form
@@ -139,8 +139,10 @@
             <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="//wreathList.add(new WreathProduct().getData(wreath));&#xa;//wreathProductPanel.add(wreathList.get(0));"/>
           </AuxValues>
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
-            <Property name="axis" type="int" value="1"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="1"/>
+            <Property name="rows" type="int" value="0"/>
+            <Property name="verticalGap" type="int" value="5"/>
           </Layout>
         </Container>
       </SubComponents>
